src/snapshots/afrotd__parser__tests__interpreation_html_8.3.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei einem Try gibt B2 einem Team A-Fumble einen neuen Antrieb und
            der Ball wird durch Team B in der eigenen Endzone recovert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Safety. Team A wird ein Punkt zuerkannt (Regeln 8.3.1 und
                8.5.1).
            </p>
        </details>
    </div>
</article>
