src/snapshots/afrotd__parser__tests__interpreation_html_8.3.2_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.2.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei einem Ein-Punkt-Try wird Team A’s Kick geblockt. A2 recovert
            den Ball im Spielfeld jenseits der neutralen Zone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball ist dort dead, wo er durch A2 recovert wurde. Der Try
                ist beendet.
            </p>
        </details>
    </div>
</article>
