src/snapshots/afrotd__parser__tests__interpreation_html_8.3.2_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.2.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei einem Ein-Punkt-Try wird Team A’s Kick geblockt. Der Ball wird
            von B3 recovert und über Team A’s Goalline advanct. Während B3’s
            Lauf clippt B4.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Keine Punkte, der Try ist beendet, und die Strafe wird durch
                die Regel aufgehoben (Regel 8.3.4.b).
            </p>
        </details>
    </div>
</article>
