src/snapshots/afrotd__parser__tests__interpreation_html_8.3.2_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.2.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei einem Try fängt B1 Team A’s legalen Vorwärtspass in seiner
            Endzone ab. Er trägt den Ball über Team A’s Goalline und (a) es
            foult niemand während des Laufes; (b) B3 clippt während des Laufes;
            (c) A2 foult während des Laufes.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Team B erhält zwei Punkte zuerkannt. (b) Keine Punkte, der
                Try ist beendet und die Strafe wird durch die Regel aufgehoben.
                (c) Team B erhält zwei Punkte zuerkannt und die Strafe wird
                durch die Regel aufgehoben (Regel 8.3.1 und 8.3.4.a und
                8.3.4.b).
            </p>
        </details>
    </div>
</article>
