src/snapshots/afrotd__parser__tests__interpreation_html_8.3.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Beide Teams foulen während des Try und Team B erlangte keinen
            Ballbesitz.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Wiederholung des Try vom Previous Spot.
            </p>
        </details>
    </div>
</article>
