src/snapshots/afrotd__parser__tests__interpreation_html_8.3.3_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.3.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A hat sich zu einem Try in der Spielfeldmitte an der B-3
            aufgestellt. Team A verursacht einen Fehlstart und die Strafe
            bringt den Ball auf die B-8. Der Fieldgoalversuch wird geblockt,
            aber B77 befand sich beim Snap in der neutralen Zone. Die Strafe
            bringt den Ball auf die B-4 zur Wiederholung des Try. Team A
            verlangt, dass der Ball auf die rechte Hash Mark verlegt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Schiedsrichter kommen dem Verlangen nach und der Ball wird
                an der B-4 auf der rechten Hash Mark platziert.
            </p>
        </details>
    </div>
</article>
