src/snapshots/afrotd__parser__tests__interpreation_html_8.3.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines Try foulen beide Teams, bevor Team B einen
            Vorwärtspass abfängt. Während des Returns (a) clippt B23 oder (b)
            tackelt A18 den Ballträger, indem er dessen Helmgitter ergreift und
            daran zieht.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                In beiden Fällen heben sich die Fouls auf und der Down wird
                wiederholt.
            </p>
        </details>
    </div>
</article>
