src/snapshots/afrotd__parser__tests__interpreation_html_8.3.4_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.4.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines Zwei-Punkte-Try verursacht Team A einen illegalen
            Shift. B21 recovert einen Fumble und bei dem Return schlägt A80
            einen Gegner. B21 advanct den Ball über A’s Goalline.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Punkte zählen und die Strafe für A80’s schweres Foul wird
                beim anschließenden Kickoff oder dem Succeeding Spot in
                Extraperioden durchgeführt. A80 wird disqualifiziert.
            </p>
        </details>
    </div>
</article>
