src/snapshots/afrotd__parser__tests__interpreation_html_8.4.2_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.4.2.II
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 8 von der B-40. Team A’s Fieldgoalversuch wird von B1 an der
            B-10 berührt und geht an der B-5 ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B’s Ball an der B-5.
            </p>
        </details>
    </div>
</article>
